@@ -108,15 +108,15 @@ requires 'YAML'                 => '0.71' if $] >= 5.008_001;
 requires 'YAML::XS'             => '0.33' if $] >= 5.008_005;
 requires 'Test::More'           => '0.62';                    # 5.8.8  core
 requires 'Test::Harness'        => '3.17';                    # 5.10.1 core
-requires 'ExtUtils::CBuilder'   => '0.2602';                  # 5.10.1 core
+requires 'ExtUtils::CBuilder'   => '0.27';                    # 5.12.0 core
 requires 'ExtUtils::Manifest'   => '1.58';                    # 5.13.3 core
-requires 'ExtUtils::ParseXS'    => '2.2002';                  # 5.10.1 core
+requires 'ExtUtils::ParseXS'    => '2.21';                    # 5.12.0 core
 requires 'IO::File'             => '1.13';                    # 5.8.8  core
 requires 'YAML::Tiny'           => '1.41';
 requires 'Archive::Tar'         => '1.52';                    # 5.10.1 core
 requires 'ExtUtils::Install'    => '1.54';                    # 5.10.1 core
 requires 'ExtUtils::Installed'  => '1.999_001';               # 5.10.1 core
-requires 'Module::Build'        => '0.340201';                # 5.10.1 core
+requires 'Module::Build'        => '0.36';                    # 5.11.3 core
 requires 'Text::Glob';
 requires 'CPAN'                 => $WANT_CPAN;
 requires 'Term::ReadKey';
